# AEIC

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: sphinx_deploy.yml  sphinx_update.yml
_static/: documentation_options.js
docs/: conf.py  index.rst
src/AEIC/: performance_model.py
src/BADA/: README.txt  aircraft_parameters.py  fuel_burn_base.py  helper_functions.py  model.py
src/IO/: B738__.LTO  B738__.PTF  SAMPLE__.OPF  default_config.toml  default_performance_model.json  sample_performance_model.toml
src/missions/: sample_missions_10.json
src/parsers/: LTO_reader.py  OPF_reader.py  PTF_reader.py
src/sandbox/: bada.py  distance.py  interpolate.py  main.py  parser.py  trajectory.py
src/sandbox/data/: B738__.PTF  OAG_2024_SUBSET.csv
src/utils/: consts.py  custom_types.py  helpers.py  standard_atmosphere.py
src/weather/: 2_profile.py  data.grib.5b7b6.idx  draw.py  extract_wind_contour.py  isosurf.py  main.py  profile.py  sample_missions_AACES.json  trajectory.py  utils.py
src/weather/ERA5/: sample.grib.5b7b6.idx
src/weather/contrails/: main.py  postProcess.py  utils.py
src/weather/contrails/data/: 01-01-23.grib.5b7b6.idx  01-01-23.grib.da267.idx  01-01-25.grib.5b7b6.idx  12-30-22.grib.5b7b6.idx  12-31-22.grib.5b7b6.idx
src/weather/wind_field/: extract_wind_contour.py  profile.py  test.py
src/weather/wind_field/Profiles/: DCA_ORD_wind_profile.nc  DFW_PHX_wind_profile.nc  IAH_LGA_wind_profile.nc  (+2 more)
